--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -18,7 +18,7 @@ jobs:
 
     env:
       Solution_Name: EventEaseApp.sln
-      #Test_Project_Path: tests/EventEaseApp.Tests/EventEaseApp.Tests.csproj
+      Test_Project_Path: tests/EventEaseApp.Tests/EventEaseApp.Tests.csproj
       Wap_Project_Directory: src/EventEaseApp.Package
       Wap_Project_Path: src/EventEaseApp.Package/EventEaseApp.Package.wapproj
 
@@ -32,7 +32,7 @@ jobs:
       - name: Install .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 9.0.x
+          dotnet-version: 8.0.x
 
       # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
       - name: Setup MSBuild.exe
@@ -48,11 +48,11 @@ jobs:
       #   env:
       #     Configuration: ${{ matrix.configuration }}
 
-      # - name: Decode the pfx
-      #   run: |
-      #     $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
-      #     $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath "GitHubActionsWorkflow.pfx"
-      #     [IO.File]::WriteAllBytes($certificatePath, $pfx_cert_byte)
+      - name: Decode the pfx
+        run: |
+          $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
+          $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath "GitHubActionsWorkflow.pfx"
+          [IO.File]::WriteAllBytes($certificatePath, $pfx_cert_byte)
 
       - name: Create the app package
         run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile="GitHubActionsWorkflow.pfx" /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
