Refactor GitHub Actions workflow: simplify YAML structure and remove unused steps; update project references by removing xUnit packages

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -12,9 +12,7 @@ jobs:
       matrix:
         configuration: [Debug, Release]
 
-    runs-on:
-      windows-latest # For a list of available runner types, refer to
-      # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
+    runs-on: windows-latest
 
     env:
       Solution_Name: EventEaseApp.sln
@@ -28,25 +26,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      # Install the .NET Core workload
       - name: Install .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
 
-      # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
       - name: Setup MSBuild.exe
         uses: microsoft/setup-msbuild@v2
 
-      # Execute all unit tests in the solution
       - name: Execute unit tests
         run: dotnet test
-
-      # Restore the application to populate the obj folder with RuntimeIdentifiers
-      # - name: Restore the application
-      #   run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
-      #   env:
-      #     Configuration: ${{ matrix.configuration }}
 
       - name: Decode the pfx
         run: |
@@ -60,7 +49,6 @@ jobs:
           Appx_Bundle: Always
           Appx_Bundle_Platforms: "x86|x64"
           Appx_Package_Build_Mode: StoreUpload
-          # Configuration: ${{ matrix.configuration }}
 
       - name: Remove the pfx
         run: Remove-Item -Path "$env:Wap_Project_Directory\GitHubActionsWorkflow.pfx"
