--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.x
+          dotnet-version: 9.0.x
 
       - name: Setup MSBuild.exe
         uses: microsoft/setup-msbuild@v2
@@ -37,21 +37,22 @@ jobs:
       # - name: Execute unit tests
       #   run: dotnet test
 
-      - name: Decode the pfx
-        run: |
-          $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
-          $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath "GitHubActionsWorkflow.pfx"
-          [IO.File]::WriteAllBytes($certificatePath, $pfx_cert_byte)
+      # - name: Decode the pfx
+      #   run: |
+      #     New-Item -ItemType Directory -Force -Path $env:Wap_Project_Directory
+      #     $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
+      #     $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath "GitHubActionsWorkflow.pfx"
+      #     [IO.File]::WriteAllBytes($certificatePath, $pfx_cert_byte)
 
       - name: Create the app package
-        run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile="GitHubActionsWorkflow.pfx" /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
+        run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle #/p:PackageCertificateKeyFile="GitHubActionsWorkflow.pfx" /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
         env:
           Appx_Bundle: Always
           Appx_Bundle_Platforms: "x86|x64"
           Appx_Package_Build_Mode: StoreUpload
 
-      - name: Remove the pfx
-        run: Remove-Item -Path "$env:Wap_Project_Directory\GitHubActionsWorkflow.pfx"
+      # - name: Remove the pfx
+      #   run: Remove-Item -Path "$env:Wap_Project_Directory\GitHubActionsWorkflow.pfx"
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
