--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -45,7 +45,7 @@ jobs:
       #     [IO.File]::WriteAllBytes($certificatePath, $pfx_cert_byte)
 
       - name: Create the app package
-        run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle #/p:PackageCertificateKeyFile="GitHubActionsWorkflow.pfx" /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
+        run: msbuild $env:Solution_Name /p:Configuration=$env:Configuration /t:Publish /p:AppxPackageDir=$env:Wap_Project_Directory/AppPackages /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle
         env:
           Appx_Bundle: Always
           Appx_Bundle_Platforms: "x86|x64"
