--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Setup MSBuild.exe
         uses: microsoft/setup-msbuild@v2
 
+      - name: Restore dependencies
+        run: dotnet restore
+
       # - name: Execute unit tests
       #   run: dotnet test
 
