--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -48,7 +48,7 @@ jobs:
       #     [IO.File]::WriteAllBytes($certificatePath, $pfx_cert_byte)
 
       - name: Create the app package
-        run: msbuild $env:Solution_Name /p:Configuration=${{ matrix.configuration }}
+        run: msbuild $env:Solution_Name /p:Configuration=${{ matrix.configuration }} /p:RestorePackagesConfig=true
         env:
           Appx_Bundle: Always
           Appx_Bundle_Platforms: "x86|x64"
