--- a/EventEaseApp/EventEaseApp.csproj
+++ b/EventEaseApp/EventEaseApp.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Sdk.Compilers.Toolset" Version="9.0.200" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
